--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="login">
-            <a href="{% url 'login' %}"><button class="btns">Login</button></a>
+            <a href="{% url 'sign_in' %}"><button class="btns">Login</button></a>
         </div>
     </nav>
 <!---------X----------Navigation Bar----------X----------------------->
