--- a/templates/log.html
+++ b/templates/log.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,22 +9,27 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css_storage/style.css' %}" />
     <title>SKYHIGH</title>
   </head>
   <body>
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
+
+
+
+          <!-------------------sign in--------------------------------->
+          <form action="{% url 'sign_in' %}" method="post" class="sign-in-form">
+            {% csrf_token %}
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" name="name_login" placeholder="Username" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" name="p_word" placeholder="Password" />
             </div>
             <input type="submit" value="Login" class="btn solid" />
             <p class="social-text">Or Sign in with social platforms</p>
@@ -42,19 +48,24 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form">
-            <h2 class="title">Sign in</h2>
+
+
+
+          <!-------------------sign up--------------------------------->
+          <form action="{% url 'signup' %}" method="post" class="sign-up-form">
+            {% csrf_token %}
+            <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Username" name="username" />
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" name="email" placeholder="Email" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" name="password" placeholder="Password" />
             </div>
             <input type="submit" class="btn" value="Sign up" />
             <p class="social-text">Or Sign up with social platforms</p>
@@ -76,13 +87,16 @@
         </div>
       </div>
 
+
+
+
+
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
+              {{ word1 }}
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -93,10 +107,7 @@
         <div class="panel right-panel">
           <div class="content">
             <h3>One of us ?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
-            </p>
+            
             <button class="btn transparent" id="sign-in-btn">
               Sign in
             </button>
@@ -106,6 +117,6 @@
       </div>
     </div>
 
-    <script src="{% static 'main.js' %}"></script>
+    <script src="{% static 'js_storage/main.js' %}"></script>
   </body>
 </html>
