--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,18 @@
                 <li class="link"><a href="#">Services</a></li>
             </ul>
         </div>
+
         <div class="login">
+            {% if request.user.is_authenticated %}
+
+            <a href=""><button class="btns">{{ request.user }}</button></a>
+
+            {% else %}
+
             <a href="{% url 'sign_in' %}"><button class="btns">Login</button></a>
+
+           {% endif %}
+
         </div>
     </nav>
 <!---------X----------Navigation Bar----------X----------------------->
